--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-  background-color: #000;
+  background-color: var(--cor-12);
 }
 
 .header {
@@ -8,11 +8,8 @@
   gap: 20px;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  max-width: 1200px;
-  box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .header-menu {
@@ -22,13 +19,9 @@
 }
 
 .header-menu a {
-  color: #fff;
   padding: 16px 0px;
   display: inline-block;
-  font-size: 18px;
   position: relative;
-  font-family: 'Poppins';
-  font-weight: 400;
 }
 
 .header-menu a::after {
@@ -36,7 +29,7 @@
   display: block;
   width: 0px;
   height: 2px;
-  background: #fff;
+  background: var(--cor-0);
   margin-top: 4px;
   transition: 0.3s;
   position: absolute;
@@ -51,12 +44,12 @@
       gap: 20px;
   }
   .header-menu a {
-      background: #111;
+      background: var(--cor-11);
       padding: 12px 16px;
       border-radius: 4px;
   }
   .header-menu a:hover {
-      background-color: #2e2e2e;
+      background-color: var(--cor-10);
   }
   .header a:after {
       display: none;
