--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,19 +1,12 @@
 .introducao-bg {
-  background: #000;
-  color: #fff;
-  box-shadow: inset 0 -120px white;
+  background: var(--cor-12);
+  box-shadow: inset 0 -120px var(--cor-0);
 }
 
 .introducao {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0px 40px;
-  max-width: 1200px;
-  box-sizing: border-box;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .introducao-conteudo {
@@ -22,43 +15,22 @@
 }
 
 .introducao img {
+  width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
 .introducao h1 {
   margin-bottom: 32px;
-  font-size: 64px;
-  line-height: 1.125;
-  font-family: 'Poppins';
-  font-weight: 600;
-}
-
-.introducao h1 span {
-  color: #ffbb00;
 }
 
 .introducao p {
   margin-bottom: 20px;
-  font-size: 24px;
-  line-height: 1.5;
-  color: #b2b2b2;
-  font-family: 'Roboto';
-  font-weight: 400;
-}
-
-@media (max-width: 1200px) {
-  .introducao h1 {
-      font-size: 48px;
-  }
-  .introducao p {
-      font-size: 18px;
-  }
 }
 
 @media (max-width: 800px) {
   .introducao-bg {
-      background: #111;
+      background: var(--cor-11);
       padding-top: 40px;
       box-shadow: inset 0 -60px #fff;
   }
@@ -70,7 +42,6 @@
       padding-bottom: 0px;
   }
   .introducao h1 {
-      font-size: 32px;
       margin-bottom: 16px;
   }
   .introducao img {
