adicionando  termos e condições e  página sobre as bicicletas

--- a/css/style.css
+++ b/css/style.css
@@ -21,5 +21,11 @@
 /* Seguros */
 @import "./seguros/seguros.css";
 
+/* Termos */
+@import "./termos/termos.css";
+
+/* Bicicletas */
+@import "./bicicletas/bicicletas.css";
+
 
 
