--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -3,12 +3,15 @@
 }
 
 .seguros {
-  padding-top: 60px;
   padding-bottom: 60px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 40px;
   align-items: center;
+}
+
+#seguros .seguros {
+  padding-top: 0px;
 }
 
 .seguros h2 {
@@ -20,6 +23,7 @@
   padding: 32px 32px 32px 60px;
   display: grid;
   grid-template-columns: 1fr auto;
+  border-radius: 4px;
 }
 
 .seguros-item h3 {
