--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
 
 /* Home */
 @import "./home/introducao.css";
@@ -18,7 +19,7 @@
 @import "./bicicletas/bicicletas-lista.css";
 @import "./bicicletas/bicicletas.css";
 
-/* Bicicleta*/
+/* Bicicleta */
 @import "./bicicleta/bicicleta.css";
 @import "./bicicleta/seguro.css";
 
@@ -28,8 +29,14 @@
 @import "./seguros/vantagens.css";
 @import "./seguros/perguntas.css";
 
+/* Contato */
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
+
 /* Termos */
 @import "./termos/termos.css";
+
+
 
 
 
